<resources>
    //Main Activity Strings
    <string name="newUser">NEW</string>
    <string name="chooseUser">Choose a User!</string>
    <string name="white">White</string>
    <string name="grey">Grey</string>
    <string name="cyan">Cyan</string>
    <string name="chooseBGColor">Choose a Background Color</string>
    <string name="chooseIcon">Choose an Icon</string>
    <string name="randomName">Random Name</string>
    <string name="checkMark">✔</string>
    <string name="userName">User Name</string>
    <string name="chooseNumLives">Choose Number of Lives</string>
    <string name="icon1">Boy</string>
    <string name="icon2">Girl</string>
    <string name="icon3">Snake</string>


    <string name="app_name">GameBoi</string>
    <string name="toMath">Next</string>
    <string name="toSimon">Next</string>
    <string name="titleMathGame">Math Game</string>
    <string name="titleSimonGame">FlashColors</string>
    <string name="toRock">Next</string>
    <string name="titleRock">Rock Paper Scisscors</string>
    <string name="textview">TextView</string>
    <string name="rock">Rock</string>
    <string name="rock_paper_scissor_game">Rock Paper Scissor Game</string>
    <string name="you_won">"You won this round! Press continue to play again. "</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
    <string name="continue_game">Continue</string>
    <string name="computerchoice">Our Choice:</string>

    <string name="red">RED</string>
    <string name="yellow">YELLOW</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>
    <string name="lose1">-1</string>
    <string name="flashLoss">You lost a life! You got 2 patterns incorrect!</string>
    <string name="flashWin1">Congrats! You can move onto the next level</string>
    <string name="flashGames">You have won:</string>
    <string name="flashLives">Lives Left:</string>
    <string name="mathScore">Level 1 Score:</string>
    <string name="flashLvlScore">Level 2 Score:</string>
    <string name="RPSScore">Level 3 Score:</string>
    <string name="flashTotal">Total Score:</string>
    <string name="flashWin2">Select \"Next\" to move onto Level 3</string>
    <string name="flashScore">120</string>
    <string name="score">Score:</string>
    <string name="icon">icon</string>

    <string name="lost_round">You have lost this round! Press Continue to play again.</string>
    <string name="try_again">No one won this round! Try again.</string>
    <string name="won_rps">Congratulations! You won the Rock Paper Scissors game!</string>
    <string name="lost_rps">Oh no! You lost the Rock Paper Scissors Game ;(</string>
    <string name="leaderboard">Leaderboard</string>

    //MathGame strings:
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="clear">Clear</string>
    <string name="enter">Enter</string>
    <string name="scoreZero">SCORE: 0</string>
    <string name="submit_round">SUBMIT</string>
    <string name="start_btn">START</string>
    <string name="yourchoice">Your Choice:</string>
    <string name="lbname">Name</string>
    <string name="highscores">Highscores</string>
    <string name="pandaBTN">Panda</string>
    <string name="gameboiSign">GAMEBOI</string>
    <string name="leaderboard_text">Great Job! Play Again?</string>
    <string name="pandaBTN">Panda</string>
</resources>
