<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/userName"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="9dp"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/checkNameBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/checkNameBtn"
        android:layout_width="75dp"
        android:layout_height="43dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="46dp"
        android:onClick="checkNameInput"
        android:text="@string/checkMark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/userName"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/randomNameBtn"
        android:layout_width="212dp"
        android:layout_height="49dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="142dp"
        android:onClick="randomUserName"
        android:text="@string/randomName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="192dp"
        android:layout_height="37dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="110dp"
        android:gravity="center"
        android:text="@string/chooseIcon"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/randomNameBtn" />

    <Button
        android:id="@+id/button24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="41dp"
        android:onClick="boyBTN"
        android:text="@string/icon1"
        app:layout_constraintEnd_toStartOf="@+id/button25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView48" />

    <Button
        android:id="@+id/button25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="15dp"
        android:onClick="girlBTN"
        android:text="@string/icon2"
        app:layout_constraintStart_toEndOf="@+id/button24"
        app:layout_constraintTop_toBottomOf="@+id/textView48" />

    <Button
        android:id="@+id/button26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="33dp"
        android:onClick="snakeBTN"
        android:text="@string/icon3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button25"
        app:layout_constraintTop_toBottomOf="@+id/textView48" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="188dp"
        android:layout_height="62dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="110dp"
        android:gravity="center"
        android:text="@string/chooseBGColor"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button25" />

    <Button
        android:id="@+id/greyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:onClick="greyBtn"
        android:text="@string/grey"
        app:layout_constraintStart_toEndOf="@+id/whiteBtn"
        app:layout_constraintTop_toBottomOf="@+id/textView49" />

    <Button
        android:id="@+id/cyanBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:onClick="cyanBtn"
        android:text="@string/cyan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/greyBtn"
        app:layout_constraintTop_toBottomOf="@+id/textView49" />

    <Button
        android:id="@+id/whiteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="41dp"
        android:onClick="whiteBtn"
        android:text="@string/white"
        app:layout_constraintEnd_toStartOf="@+id/greyBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView49" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="191dp"
        android:layout_height="63dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="110dp"
        android:gravity="center"
        android:text="@string/chooseNumLives"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greyBtn" />

    <Button
        android:id="@+id/numLivesBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:onClick="twoLives"
        android:text="@string/two"
        app:layout_constraintStart_toEndOf="@+id/numLivesBtn1"
        app:layout_constraintTop_toBottomOf="@+id/textView50" />

    <Button
        android:id="@+id/numLivesBtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="41dp"
        android:onClick="oneLife"
        android:text="@string/one"
        app:layout_constraintEnd_toStartOf="@+id/numLivesBtn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView50" />

    <Button
        android:id="@+id/numLivesBtn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:onClick="threeLives"
        android:text="@string/three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numLivesBtn2"
        app:layout_constraintTop_toBottomOf="@+id/textView50" />

    <Button
        android:id="@+id/settingSubmitBtn"
        android:layout_width="347dp"
        android:layout_height="76dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:onClick="submitCustomizations"
        android:text="@string/submit_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numLivesBtn2" />
</androidx.constraintlayout.widget.ConstraintLayout>