<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RpSWonRoundDisplay">

    <Button
        android:id="@+id/button7"
        android:layout_width="99dp"
        android:layout_height="40dp"
        android:layout_marginStart="286dp"
        android:layout_marginTop="588dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="103dp"
        android:onClick="continueGame"
        android:text="@string/continue_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/continue_game" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="189dp"
        android:layout_height="95dp"
        android:fontFamily="@font/luckiest_guy"
        android:text="@string/you_won"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.699"
        tools:text="@string/you_won" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="129dp"
        android:layout_height="43dp"
        android:layout_marginStart="236dp"
        android:layout_marginTop="152dp"
        android:fontFamily="@font/luckiest_guy"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="117dp"
        android:layout_height="29dp"
        android:layout_marginStart="236dp"
        android:layout_marginTop="308dp"
        android:fontFamily="@font/luckiest_guy"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="153dp"
        android:layout_marginEnd="205dp"
        android:layout_marginBottom="129dp"
        android:fontFamily="@font/luckiest_guy"
        android:text="@string/yourchoice"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="147dp"
        android:layout_height="31dp"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="106dp"
        android:fontFamily="@font/luckiest_guy"
        android:text="@string/computerchoice"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/textView13"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>