<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Leaderboard">

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="342dp"
        android:layout_marginBottom="286dp"
        android:fontFamily="@font/bungee_shade"
        android:text="@string/three"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="108dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="108dp"
        android:fontFamily="@font/bangers"
        android:text="TextView"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView36"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="108dp"
        android:layout_height="36dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="250dp"
        android:fontFamily="@font/bangers"
        android:text="TextView"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView39"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="108dp"
        android:layout_height="40dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="110dp"
        android:fontFamily="@font/bangers"
        android:text="TextView"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView39"
        app:layout_constraintEnd_toStartOf="@+id/textView37"
        app:layout_constraintStart_toEndOf="@+id/textView35"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="108dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="267dp"
        android:fontFamily="@font/bangers"
        android:text="TextView"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView40"
        app:layout_constraintStart_toEndOf="@+id/textView38"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="179dp"
        android:layout_height="41dp"
        android:layout_marginTop="53dp"
        android:layout_marginBottom="650dp"
        android:fontFamily="@font/bangers"
        android:text="@string/leaderboard"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="33dp"
        android:layout_height="61dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="27dp"
        android:fontFamily="@font/bungee_shade"
        android:text="@string/one"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView35"
        app:layout_constraintEnd_toStartOf="@+id/textView31"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="108dp"
        android:layout_height="40dp"
        android:fontFamily="@font/bangers"
        android:text="TextView"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="194dp" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="50dp"
        android:layout_height="37dp"
        android:layout_marginStart="156dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/bangers"
        android:text="@string/lbname"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView31"
        app:layout_constraintEnd_toStartOf="@+id/textView33"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/bangers"
        android:text="@string/highscores"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView34"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView32"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="108dp"
        android:layout_height="36dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/bangers"
        android:text="TextView"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView37"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toEndOf="@+id/textView31"
        app:layout_constraintTop_toBottomOf="@+id/textView33"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="113dp"
        android:fontFamily="@font/bungee_shade"
        android:text="@string/two"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView38"
        app:layout_constraintEnd_toStartOf="@+id/textView36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />
</androidx.constraintlayout.widget.ConstraintLayout>